--- a/index.html
+++ b/index.html
@@ -31,20 +31,18 @@
     	<h2 style="color:#F2B300;">S</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">A</h2>
+    	<h2 style="color:#0719D4;">U</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">C</h2>
+    	<h2 style="color:#D14D39;">M</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">H</h2>
+    	<h2 style="color:#8FAD00;">A</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">I</h2>
+    	<h2 style="color:#8377E4;">T</h2>
     </div>
-	<div class="balloons text-center" id="b6">
-    	<h2 style="color:#0719D4;">N</h2>
-    </div>
+	
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
  
 
@@ -93,9 +91,9 @@
 		<div class="row message">
 			<div class="col-md-12">
 				<p>Today is...</p>
-				<p>your message </p>
+				<p>Eheheh </p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Sachin</p>
+				<p>a very happy birthday Sumat</p>
 				
 			</div>
 		</div>
