--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <div class="balloons text-center" id="b1">
     	<h2 style="color:#F2B300;">S</h2>
     </div>
+	<div class="balloons text-center" id="b6">
+    	<h2 style="color:#0719D4;">S</h2>
+    </div>
     <div class="balloons text-center" id="b2">
     	<h2 style="color:#0719D4;">U</h2>
     </div>
